Set gRPC default transport to React Native - sdk calls now work from RN app

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -37,7 +37,7 @@
     "@onflow/decode": "0.0.6",
     "@onflow/encode": "0.0.4",
     "@onflow/interaction": "0.0.8",
-    "@onflow/send": "0.0.15",
+    "@onflow/send": "file:../send",
     "@qvvg/templar": "0.0.1"
   }
 }
