--- a/packages/send/package.json
+++ b/packages/send/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@improbable-eng/grpc-web": "0.12.0",
     "@improbable-eng/grpc-web-node-http-transport": "0.12.0",
+    "@improbable-eng/grpc-web-react-native-transport": "0.12.0",
     "@onflow/interaction": "0.0.7",
     "@onflow/protobuf": "0.1.5",
     "@onflow/response": "0.0.2"
